k8s/staging/content-upload-service-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: content-upload-service
    service-type: content-service
  name: content-upload-service-netpol
  namespace: iacherie-staging
spec:
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to: []
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: iacherie-staging
    ports:
    - port: 8001
      protocol: TCP
  podSelector:
    matchLabels:
      app: content-upload-service
  policyTypes:
  - Ingress
  - Egress
